# qwergpt

./: README.md  pyproject.toml  requirements.txt  setup.py
qwergpt/: evaluator.py  utils.py
qwergpt/bot/: distiller.py
qwergpt/embedders/: __init__.py  base.py  zhipu.py
qwergpt/llm/: __init__.py  ollama.py  tonyi.py  zhipu.py
qwergpt/llms/: deepseek.py  ollama.py  openai.py  tonyi.py  zhipu.py
qwergpt/pipelines/: __init__.py  base.py
qwergpt/roles/: planner.py  reviewer.py  rewriter.py
qwergpt/stores/: __init__.py  base.py  faiss.py  milvus.py
tests/: test_prompt.py
