[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwergpt"
version = "0.1.0"
authors = [
    { name = "Leo Peng", email = "leo@promptcn.com" },
]
description = "QwerGPT: A Lightweight LLM Framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.10.2",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/promptcn/qwergpt"
